--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -2,7 +2,7 @@
     font-family: serif;
     font-size: 2.25rem;
     font-weight: normal;
-    color: gray;
+    color: black;
     border: 2px solid black;
     padding: 24px;
 }
@@ -27,15 +27,6 @@
 .infoCardContainer--vintage {
     background-color: #EDCFD1
 }
-
-.infoCardContainer--vintage {
-    background-color: #EDCFD1
-}
-
-.infoCardContainer--vintage--infoCardHeadline {
-    color: #000000;
-    font-weight: bold;
-} 
 
 .infoCardContainer--metal {
     background-color: #e1e1e1;
